parser/ScalrParser.jj
options
{
  LOOKAHEAD=3;
}
PARSER_BEGIN(ScalrParser)
import java.io.*;

public class ScalrParser {
    public static void main(String[] args) {
		BufferedReader br = null;
        String text = "";
        try {
			br = new BufferedReader(new FileReader(args[0]));
            String line = "";
            while ((line = br.readLine()) != null) {
                text += line + "\n";

            }
	    System.out.println(text);
            new ScalrParser(new java.io.StringReader(text)).function();
            System.out.println("Syntax is okay");
        } catch (Throwable e) {
            // Catching Throwable is ugly but JavaCC throws Error objects!
            System.out.println("Syntax check failed: " + e.getMessage() + "~");
        }
    }
}
PARSER_END(ScalrParser)

SKIP : { " " | "\t" }
TOKEN: {
    "==" | ">" | "<" | "<=" | ">=" |
    "and" | "or" | "not" | "->" | "." | "\n" | 
    "," | "+" | "-" | "%" | "(" | ")" | "[" | "]" |
	"note" | "pitch" | "volume" | 
       	"duration" | "end" | "func" |
	"while" | "foreach" | "in" |
	"if" | "else" | "track" |
	<LETTER: ["A"-"Z"] | ["a"-"z"]> |
	<INT: "0" | ["1"-"9"](["0"-"9"])+> |
	<ID: <LETTER>(<LETTER> | <INT>)*> |
    <DEGREE: ["A"-"G"]("b" | "s")?(["0"-"9"] | "1""0")>
	}
/* for some reason, both parameters() 
and block() nonterminals are producing
mysterious syntax check failures */
void function(): {} {"func" <ID> "("(parameters())?")" (block())? ret() "\n" "end" | ""}

void parameters(): {} { <ID> (parameters1())*}

void parameters1(): {} {"," parameters()}

void block(): {} {line() (block1())*}

void block1(): {} {"\n" line()}

void line(): {} {loop() 
| conditional() 
| assignment() 
| "\n" }

void loop(): {} {"while" "(" booleanExpr() ")" block() "end" 
| "foreach" "(" <ID> "in" ret() ")" block() "end"}

void booleanExpr(): {} {bE1() booleanExpr1()}

void booleanExpr1(): {} {"and" bE1() booleanExpr1()
| "or" bE1() booleanExpr1()
| ""}

void bE1(): {} {"not" booleanExpr()
| operand() "==" operand()
| operand() ">" operand()
| operand() "<" operand() 
| operand() "<=" operand() 
| operand() ">=" operand()}

void conditional(): {} {"if" "(" booleanExpr() ")" block() "end" "\n" conditional1()}

void conditional1(): {} {"else" conditional() 
| "else" block() "end" 
| ""}

void assignment(): {} {<ID> "=" expression() 
| <ID> "+=" expression() 
| <ID> "*=" expression() 
| <ID> "/=" expression() 
| <ID> "%=" expression()}

void expression(): {} {expr1() expr0()}

void expr0(): {} { "+" expr1() expr0()
| "-" expr1() expr0()
| ""}

void expr1(): {} {"*" expr2() expr1()
| "/" expr2() expr1() 
| ""}

void expr2(): {} {"%" expr3() expr2()
| ""}

void expr3(): {} {"(" expression() ")" 
| operand()} 

void operand(): {} {<ID> 
| <INT> 
| note() 
| sequence()}

void note(): {} {"note" (note1())+}

void note1(): {} {"." "pitch" "(" [expression(), "+" expression(), "-" expression(),<DEGREE>] ")"
| "." "volume" "(" [expression(), "+" expression(), "-" expression()] ")"
| "." "duration" "(" [expression(), "+" expression(), "-" expression()] ")"}


void ret(): {} {<ID>
| sequence()}

void sequence(): {} {"[" note() (sequence1())* "]"}

void sequence1(): {} {"," note()}

void track(): {} {"track" "->" ret()}
